--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,6 @@
-body {
-    background-color: aquamarine;
-}
-
 #header {
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 #header img {
@@ -12,28 +8,95 @@ body {
     border: 1px solid black;
     box-shadow: 2px 5px 2px rgb(166, 166, 166);
 }
-img{
-    width: 300px;
-    height: 300px;
+img {
+    width: 150px;
+    height: 150px;
     border-radius: 50%;
 }
-h3{
-    background-color: rgb(204, 171, 235);
+
+h3 {
+    background-color: rgb(210, 203, 216);
     padding: 4px;
-    border: 4px dotted #e6eff6;
-    margin-right: 10em;
-    margin-left: 10em;
+    border: 1px dotted #e6eff6;
+    margin-right: 600px;
+    margin-left: 600px;
 }
-h5{
+
+h5 {
     font-family: 'Courier New', Courier, monospace;
-    color: teal;
     font-size: 20px;
 }
+
 p {
-    padding-right: 5em;
-    padding-left: 5em;
+    padding-right: 300px;
+    padding-left: 300px;
 }
-/* Add the following: */
-app-skills {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', 'sans-serif';
+
+router-outlet {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.btn {
+    position: relative;
+    display: inline-block;
+    margin: 40px auto;
+    padding: 0.5%;
+
+    overflow: hidden;
+
+    border-width: 0;
+    outline: none;
+    border-radius: 2px;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.6);
+
+    background-color: #669197;
+    color: #d7e2ec;
+    font-size: 1.4em;
+    text-decoration: none;
+
+    transition: background-color 0.3s;
+}
+
+.btn:hover,
+.btn:focus {
+    background-color: #d7a3f5;
+}
+
+.btn > * {
+    position: relative;
+}
+
+.btn span {
+    display: block;
+    padding: 12px 24px;
+}
+
+.btn:before {
+    content: '';
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+
+    display: block;
+    width: 0;
+    padding-top: 0;
+
+    border-radius: 100%;
+
+    background-color: rgba(236, 240, 241, 0.3);
+
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.btn:active:before {
+    width: 120%;
+    padding-top: 120%;
+
+    transition: width 0.2s ease-out, padding-top 0.2s ease-out;
 }
