--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,16 @@
-<div style="text-align:center">
+<div id="header">
+  <nav>
+    <a class="btn" routerLink="greeting" routerLinkActive="active">Home</a>
+    <a class="btn" routerLink="skills" routerLinkActive="active">Skills</a>
+    <a class="btn" routerLink="message" routerLinkActive="active">Message</a>
+    <a class="btn" routerLink="contact" routerLinkActive="active">contact</a>
+  </nav>
   <h1>
    {{ title }}
   </h1>
   <img alt="Profile Picture" src="../assets/images/profile.JPG">
   <h3>{{city}}</h3>
   <h5>{{tagline}}</h5>
-  <p>About Me: {{aboutMe}}</p>
-  <app-skills></app-skills>
+  <p> {{aboutMe}} </p>
+  <router-outlet></router-outlet>
 </div>
